tools/k3d/backend/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picsrate-api
  namespace: studio-qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picsrate-api
  template:
    metadata:
      labels:
        app: picsrate-api
    spec:
      containers:
        - name: picsrate-api
          image: studio-registry:5000/picsrate-api:latest
          ports:
            - containerPort: 3000
