tools/k3d/backend/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: studio-dev
spec:
  selector:
    app: backend-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
